[gd_scene load_steps=4 format=2]

[ext_resource path="res://City.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://SwipeHandler.tscn" type="PackedScene" id=3]

[node name="City" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="House" type="TextureButton" parent="." index="0"]

modulate = Color( 0, 1, 0.484375, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 120.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
expand = true
_sections_unfolded = [ "Rect", "Textures", "Visibility" ]

[node name="School" type="TextureButton" parent="." index="1"]

modulate = Color( 0.78125, 1, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 595.0
margin_top = 372.0
margin_right = 715.0
margin_bottom = 492.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
expand = true
_sections_unfolded = [ "Rect", "Textures", "Visibility" ]

[node name="TextureButton3" type="TextureButton" parent="." index="2"]

modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1030.0
margin_top = 589.0
margin_right = 1150.0
margin_bottom = 709.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
expand = true
_sections_unfolded = [ "Rect", "Textures", "Visibility" ]

[node name="TextureButton4" type="TextureButton" parent="." index="3"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1384.0
margin_top = 822.0
margin_right = 1504.0
margin_bottom = 942.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
expand = true
_sections_unfolded = [ "Rect", "Textures", "Visibility" ]

[node name="SwipeHandler" parent="." index="4" instance=ExtResource( 3 )]

[node name="SwipingCamera" parent="SwipeHandler" index="0"]

position = Vector2( 684.955, 387 )
limit_right = 1500
limit_bottom = 950

[connection signal="pressed" from="House" to="." method="_on_House_pressed"]

[connection signal="pressed" from="School" to="." method="_on_School_pressed"]

[connection signal="pressed" from="TextureButton3" to="." method="_on_TextureButton_pressed"]

[connection signal="pressed" from="TextureButton4" to="." method="_on_TextureButton_pressed"]


[editable path="SwipeHandler"]
